istio/redis-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: redis-cluster-b
  namespace: dev
spec:
  hosts:
    - redis.dev.svc.cluster.local
  location: MESH_INTERNAL
  resolution: DNS
  ports:
    - number: 6379
      name: tcp-redis
      protocol: TCP
  endpoints:
    - address: redis.dev.svc.cluster.local
