istio/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: redis-external
  namespace: dev
spec:
  hosts:
    - redis
  location: MESH_INTERNAL
  resolution: STATIC
  ports:
    - number: 6379
      name: tcp-redis
      protocol: TCP
  endpoints:
    - address: 10.1.12.92
      ports:
        tcp-redis: 6379
